--- a/mt-spring-generator-starter/pom.xml
+++ b/mt-spring-generator-starter/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>mt-spring-starter-parent</artifactId>
-        <groupId>mt.spring</groupId>
+        <groupId>com.github.668mt.web</groupId>
         <version>1.0-RELEASE</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
@@ -13,7 +13,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>mt.spring</groupId>
+            <groupId>com.github.668mt.web</groupId>
             <artifactId>mt-spring-web-starter</artifactId>
             <version>${mt-spring-web-starter.version}</version>
         </dependency>
