--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.668mt.web</groupId>
     <artifactId>mt-spring-starter-parent</artifactId>
-    <version>1.0-RELEASE</version>
+    <version>1.0.1</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -27,7 +27,8 @@
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
         <mt-spring-web-starter.version>1.0-RELEASE</mt-spring-web-starter.version>
-        <sonatypeOssDistMgmtSnapshotsUrl>https://oss.sonatype.org/content/repositories/snapshots/</sonatypeOssDistMgmtSnapshotsUrl>
+        <sonatypeOssDistMgmtSnapshotsUrl>https://oss.sonatype.org/content/repositories/snapshots/
+        </sonatypeOssDistMgmtSnapshotsUrl>
     </properties>
     <url>https://github.com/668mt/mt-spring-web</url>
     <name>mt-spring-web</name>
