--- a/mt-tools/base-tools/pom.xml
+++ b/mt-tools/base-tools/pom.xml
@@ -6,6 +6,7 @@
         <groupId>mt.spring.mtools</groupId>
         <artifactId>mtools</artifactId>
         <version>1.0</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>base-tools</artifactId>
