--- a/mt-tools/pom.xml
+++ b/mt-tools/pom.xml
@@ -32,6 +32,20 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
     </properties>
+    <url>https://github.com/668mt/mt-spring-web</url>
+    <name>mtools</name>
+
+    <scm>
+        <tag>master</tag>
+        <url>https://github.com/668mt/mt-spring-web.git</url>
+    </scm>
+    <developers>
+        <developer>
+            <name>martin</name>
+            <email>765936728@qq.com</email>
+            <organization/>
+        </developer>
+    </developers>
 
     <dependencies>
         <dependency>
