--- a/mt-spring-web-starter/pom.xml
+++ b/mt-spring-web-starter/pom.xml
@@ -13,6 +13,12 @@
     <artifactId>mt-spring-web-starter</artifactId>
 
     <dependencies>
+        <!-- redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <optional>true</optional>
+        </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
