--- a/mt-tools/base-tools/pom.xml
+++ b/mt-tools/base-tools/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>mt.spring.mtools</groupId>
         <artifactId>mtools</artifactId>
-        <version>1.0</version>
+        <version>3.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -16,12 +16,24 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-web</artifactId>
-                <version>5.2.1.RELEASE</version>
+                <version>6.0.4</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5 -->
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>5.1.3</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5-fluent -->
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5-fluent</artifactId>
+            <version>5.1.3</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
@@ -40,12 +52,12 @@
         <dependency>
             <groupId>com.github.668mt.web</groupId>
             <artifactId>utils</artifactId>
-            <version>1.0.3</version>
+            <version>3.0</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.70</version>
+            <version>1.2.83</version>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
