--- a/mt-tools/pom.xml
+++ b/mt-tools/pom.xml
@@ -6,31 +6,30 @@
     <groupId>mt.spring.mtools</groupId>
     <artifactId>mtools</artifactId>
     <packaging>pom</packaging>
-    <version>1.0</version>
+    <version>3.0</version>
     <modules>
         <module>base-tools</module>
         <module>video-tools</module>
     </modules>
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>17</java.version>
         <slf4j.version>1.7.25</slf4j.version>
         <commons-net.version>3.6</commons-net.version>
         <commons-beanutils.version>1.9.2</commons-beanutils.version>
         <bcprov-ext-jdk15on.version>1.56</bcprov-ext-jdk15on.version>
         <httpclient.version>4.5.1</httpclient.version>
         <dom4j.version>1.6.1</dom4j.version>
-        <commons-codec.version>1.9</commons-codec.version>
+        <commons-codec.version>1.13</commons-codec.version>
         <commons-lang3.version>3.5</commons-lang3.version>
-        <commons-io.version>2.5</commons-io.version>
+        <commons-io.version>2.7</commons-io.version>
         <commons-fileupload.version>1.3.2</commons-fileupload.version>
         <commons-logging.version>1.1.1</commons-logging.version>
         <commons-collections.version>3.2.1</commons-collections.version>
-        <lombok.version>1.18.2</lombok.version>
+        <lombok.version>1.18.24</lombok.version>
         <persistence-api.version>1.0</persistence-api.version>
         <jetbrains-annotations-java5.version>16.0.3</jetbrains-annotations-java5.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
     </properties>
     <url>https://github.com/668mt/mt-spring-web</url>
     <name>mtools</name>
@@ -51,7 +50,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.2</version>
+            <version>1.18.24</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
@@ -66,7 +65,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
+            <version>1.2.9</version>
         </dependency>
     </dependencies>
     <build>
@@ -74,14 +73,17 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <release>${java.version}</release>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
+                <version>3.3.0</version>
                 <configuration>
                     <attach>true</attach>
                 </configuration>
