--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -5,17 +5,17 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.668mt.web</groupId>
     <artifactId>utils</artifactId>
-    <version>1.0.3</version>
+    <version>3.0</version>
     <properties>
         <slf4j.version>1.7.25</slf4j.version>
-        <commons-net.version>3.6</commons-net.version>
-        <commons-beanutils.version>1.9.2</commons-beanutils.version>
-        <bcprov-ext-jdk15on.version>1.56</bcprov-ext-jdk15on.version>
-        <httpclient.version>4.5.1</httpclient.version>
+        <commons-net.version>3.9.0</commons-net.version>
+        <commons-beanutils.version>1.9.4</commons-beanutils.version>
+        <bcprov-ext-jdk15on.version>1.69</bcprov-ext-jdk15on.version>
+        <httpclient.version>4.5.13</httpclient.version>
         <dom4j.version>1.6.1</dom4j.version>
-        <commons-codec.version>1.9</commons-codec.version>
+        <commons-codec.version>1.13</commons-codec.version>
         <commons-lang3.version>3.5</commons-lang3.version>
-        <commons-io.version>2.5</commons-io.version>
+        <commons-io.version>2.7</commons-io.version>
         <commons-fileupload.version>1.3.2</commons-fileupload.version>
         <commons-logging.version>1.1.1</commons-logging.version>
         <commons-collections.version>3.2.1</commons-collections.version>
@@ -25,7 +25,7 @@
         <jackson.version>2.9.0</jackson.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
+        <java.version>17</java.version>
     </properties>
 
     <url>https://github.com/668mt/mt-spring-web</url>
@@ -55,12 +55,13 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
-                <version>5.2.1.RELEASE</version>
+<!--                <version>5.2.1.RELEASE</version>-->
+                <version>6.0.4</version>
             </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>1.18.2</version>
+                <version>1.18.24</version>
             </dependency>
             <dependency>
                 <groupId>org.jetbrains</groupId>
@@ -83,19 +84,20 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>2.2.1.RELEASE</version>
+<!--            <version>2.2.1.RELEASE</version>-->
+            <version>3.0.2</version>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.8.3</version>
+            <version>1.15.3</version>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.70</version>
+            <version>1.2.83</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -112,7 +114,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
+            <version>1.2.9</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -235,14 +237,21 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+<!--                    <source>1.8</source>-->
+<!--                    <target>1.8</target>-->
+                    <encoding>UTF-8</encoding>
+<!--                    <release>${java.version}</release>-->
+<!--                    <release>1.8</release>-->
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
+                <version>3.3.0</version>
                 <configuration>
                     <attach>true</attach>
                 </configuration>
