--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>utils</module>
         <module>mt-tools</module>
         <module>mt-spring-jwt-starter</module>
+        <module>mt-spring-rocketmq-starter</module>
     </modules>
 
     <!--    <parent>-->
