--- a/mt-spring-core/pom.xml
+++ b/mt-spring-core/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>com.github.668mt.web</groupId>
             <artifactId>utils</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>com.github.pagehelper</groupId>
