--- a/mt-spring-generator-starter/pom.xml
+++ b/mt-spring-generator-starter/pom.xml
@@ -10,12 +10,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>mt-spring-generator-starter</artifactId>
+    <version>${mt.version.generator}</version>
 
     <dependencies>
         <dependency>
             <groupId>com.github.668mt.web</groupId>
             <artifactId>mt-spring-web-starter</artifactId>
-            <version>${mt-spring-web-starter.version}</version>
+            <version>${mt.version.web-starter}</version>
         </dependency>
     </dependencies>
 
