--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <module>mt-tools</module>
         <module>mt-spring-jwt-starter</module>
         <module>mt-spring-rocketmq-starter</module>
-        <module>mt-processor</module>
+<!--        <module>mt-processor</module>-->
 <!--        <module>test-processor</module>-->
         <module>mt-spring-core</module>
         <module>mt-spring-redis-starter</module>
