--- a/mt-tools/base-tools/pom.xml
+++ b/mt-tools/base-tools/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>mt.spring.mtools</groupId>
+        <groupId>io.github.668mt</groupId>
         <artifactId>mtools</artifactId>
         <version>3.0</version>
         <relativePath>../pom.xml</relativePath>
@@ -50,7 +50,7 @@
             <version>4.5.10</version>
         </dependency>
         <dependency>
-            <groupId>com.github.668mt.web</groupId>
+            <groupId>io.github.668mt</groupId>
             <artifactId>utils</artifactId>
             <version>3.0</version>
         </dependency>
