--- a/mt-spring-web-starter/pom.xml
+++ b/mt-spring-web-starter/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>mt-spring-starter-parent</artifactId>
-        <groupId>com.github.668mt.web</groupId>
+        <groupId>io.github.668mt</groupId>
         <version>3.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
@@ -15,7 +15,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.668mt.web</groupId>
+            <groupId>io.github.668mt</groupId>
             <artifactId>mt-spring-core</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
