--- a/test-processor/pom.xml
+++ b/test-processor/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.github.668mt.web</groupId>
+        <groupId>io.github.668mt</groupId>
         <artifactId>mt-spring-starter-parent</artifactId>
         <version>3.0</version>
     </parent>
@@ -44,7 +44,7 @@
                             <version>${lombok-mapstruct-binding.version}</version>
                         </path>
                         <path>
-                            <groupId>com.github.668mt.web</groupId>
+                            <groupId>io.github.668mt</groupId>
                             <artifactId>mt-processor</artifactId>
                             <version>3.0</version>
                         </path>
